test/tools/router_check/test/config/Weighted.json
{
  "virtual_hosts": [
    {
      "name": "www1",
      "domains": ["www1.lyft.com"],
      "routes": [
        {
          "prefix": "/",
          "weighted_clusters": {
            "clusters" : [
              { "name" : "cluster1", "weight" : 30 },
              { "name" : "cluster2", "weight" : 30 },
              { "name" : "cluster3", "weight" : 40 }
            ]
          }
        }
      ]
    },
    {
      "name": "www2",
      "domains": ["www2.lyft.com"],
      "routes": [
        {
          "prefix": "/",
          "weighted_clusters": {
            "runtime_key_prefix" : "www2_weights",
            "clusters" : [
              { "name" : "cluster1", "weight" : 30 },
              { "name" : "cluster2", "weight" : 30 },
              { "name" : "cluster3", "weight" : 40 }
            ]
          }
        }
      ]
    }
  ]
}
