test/tools/router_check/test/config/Weighted.yaml
virtual_hosts:
- name: www1
  domains:
  - www1.lyft.com
  routes:
  - match:
      prefix: /
    route:
      weighted_clusters:
        clusters:
        - name: cluster1
          weight: 30
        - name: cluster2
          weight: 30
        - name: cluster3
          weight: 40
  virtual_clusters:
  - headers:
    - name: :path
      safe_regex_match:
        google_re2: {}
        regex: ^/test/\d+$
    - name: :method
      exact_match: GET
    name: test_virtual_cluster
- name: www2
  domains:
  - www2.lyft.com
  routes:
  - match:
      prefix: /
    route:
      weighted_clusters:
        runtime_key_prefix: www2_weights
        clusters:
        - name: cluster1
          weight: 30
        - name: cluster2
          weight: 30
        - name: cluster3
          weight: 40
