test/tools/router_check/test/config/Weighted_expected.json
[
  {
    "authority": "www1.lyft.com",
    "path": "/foo",
    "check": {"path_redirect": "none"},
    "ssl": true,
    "internal": true
  },
  {
    "authority": "www1.lyft.com",
    "path": "/foo",
    "random_value": 115,
    "check": {"cluster_name": "cluster1"}
  },
  {
    "authority": "www1.lyft.com",
    "path": "/foo",
    "random_value": 445,
    "check": {"cluster_name": "cluster2"}
  },
  {
    "authority": "www1.lyft.com",
    "path": "/foo",
    "random_value": 560,
    "check": {"cluster_name": "cluster3"}
  }
]
